--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
 </table>
 
 <h2>Biography</h2>
-<p style="text-align:justify; text-justify:inter-ideograph;">
+<table id="tbPublications" width="100%"></table>
+<tbody> 
+	<tr>	
 	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, advised by <b>Prof. <a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">Guixu Zhang</a></b>. I also served as a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a></b>, in 2021-2022. My research interests include artificial intelligence and its applications to computer vision (e.g., image segmentation, object detection) and image processing (e.g., image super-resolution, image restoration under adverse weather, medical image processing). I have published more than 50 papers in top journals and conferences, including ACM Computing Survey, IEEE TIP\TNNLS\TMM\TCSVT\TMI, CVPR, ECCV, ICCV, AAAI, IJCAI, and MICCAI. Meanwhile, I received several premium awards, including the first prize for Innovation Achievements in Industry-Academia-Research Cooperation in China 2023, the Outstanding Ph.D. Graduates in Shanghai 2021, the CUHK Research Fellowship Scheme 2021, the winner of 2019 ICCV-AIM (Example-based RAW to RGB Mapping Challenge), etc. I also served as a reviewer for more than 30 international conferences/journals, including TPAMI, TIP,TNNLS, TMM, TCSVT, CVPR, ICCV, ECCV, and MICCAI.
-</p>
+	</tr>
+</tbody>
+
 
 <table id="tbPublications" width="100%">
 	<tbody> 
@@ -207,35 +211,40 @@
 
 
 <h2>Research Experience</h2>
-<ul>
-	<li>
+<table id="tbPublications" width="100%">
+<tbody> 
+	<tr>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021--2022</div><br>
 		<a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">Postdoctoral Fellow</a><br>
 		Topic: Image resolution and medical image reconstruction<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a><br>
-	</li>
-	<li>
+	</tr>
+	<br>
+	<tr>
 		<div style="float:left; text-align:left">Shenzhen University, Shenzhen. </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div><br>
 		Research Assistant (RA)<br>
 		Topic: Medical Image Segmentation & Research on Uncertainty in Deep Learning<br>
 		Supervisor: Prof. <a href="http://www.hebmlc.org/", target="_blank">Xizhao Wang</a> (IEEE Fellow, CAAI Fellow, IJMLC Editor-in-Chief)<br>
-	</li>
-	<li>
+	</tr>
+	<br>
+	<tr>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div><br>
 		Research Assistant (RA)<br>
 		Topic: Image Compression<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
-	</li>
-	<li>
+	</tr>
+	<br>
+	<tr>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div><br>
 		Research Assistant (RA)<br>
 		Topic: Image Restoration<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
-	</li>
-</ul>
+	</tr>
+</tbody>
+</table>
 
-<h2>Selected Publications [Total Citations: 4419] [Highest Citation: 1047] </h2>
-<h3>#：Co-ﬁrst authors *：Corresponding author</h3>
+<h2>Selected Publications [Total Citations: 4428] [Highest Citation: 1047] </h2>
+<h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
 <table id="tbPublications" width="100%">
@@ -856,6 +865,15 @@
 
 
 <h2>Academic Services</h2>
+<h3>Young Editorial Board Member</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://tis.hrbeu.edu.cn/", target="_blank">CAAI Transactions on Intelligent Systems</a></td>
+		</tr>
+	</tbody>
+</table>
+
 <h3>Guest Editor</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
@@ -892,7 +910,7 @@
 	</tbody>
 </table>
 
-<h3>Program Committee Member (PC member)</h3>
+<h3>Program Committee Member</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
@@ -902,7 +920,7 @@
 				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023, 2024.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR-NTIRE, 2022, 2023, 2024.</a></td>
 			</tr>
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">ICCV, AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
@@ -967,12 +985,12 @@
         <tr>
 			<td> Knowledge-Based Systems (KBS)</td>
 		</tr>
-		<tr>
+		<!-- <tr>
 			<td> Computer Vision and Image Understanding (CVIU)</td>
 		</tr>
 		<tr>
 			<td> IEEE Signal Processing Letters (SPL)</td>
-		</tr>
+		</tr> -->
 		<tr>
 			<td> ...</td>
 		</tr>
@@ -1152,7 +1170,7 @@
  <!--<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div>-->  
 <br>
-&copy; Juncheng Li | Last updated: 2024-12
+&copy; Juncheng Li | Last updated: 2025-7
 </center>
 </p>
 
