--- a/index_zw.html
+++ b/index_zw.html
@@ -72,10 +72,12 @@
 </table>
 
 <h2>简介</h2>
-<p style="text-align:justify; text-justify:inter-ideograph;">
-	<!-- 我于2021年在华东师范大学计算机科学与技术学院获得博士学位，由 <b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b> 和 <b><a href="https://faculty.ecnu.edu.cn/_s16/ffm/main.psp", target="_blank">方发明</a></b> 教授共同指导。2021-2022年，我在香港中文大学担任博后研究员，博后主管为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。我的研究兴趣包括人工智能及其在计算机视觉（如：图像分割、目标检测）和图像处理（如：图像超分辨率、恶劣天气下的图像复原、医学影像处理）中的应用。我在知名的期刊和会议上已发表论文40余篇，包括ACM CS、TIP、TNNLS、TMM、TCSVT、TMI、JBHI、CVPR、ICCV、ECCV、AAAI、IJCAI、ACMMM、MICCAI。我曾获得2023年中国产学研合作创新成果一等奖、2021年香港中文大学研究奖学金计划、2021年上海优秀博士毕业生、2019 ICCV-AIM（基于示例的RAW到RGB映射挑战）全球第一名等奖项。同时，我还担任包括CVPR、ICCV、ECCV、AAAI、TPAMI、TIP、TNNLS、TCYB、TMM、TCSVT、INS、PR和KBS在内的30多个国际知名期刊/会议审稿人。 -->
+<table id="tbPublications" width="100%"></table>
+<tbody> 
+	<tr>	
 	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的全球前2%顶尖科学家榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文3篇）, 谷歌学术引用量超4000余次，其中单篇一作最高引用990余次。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
-</p>
+	</tr>
+</tbody>
 
 
 <table id="tbPublications" width="100%">
@@ -239,36 +241,41 @@
 
 
 <h2>科研经历</h2>
-<ul>
-	<li>
+<table id="tbPublications" width="100%">
+<tbody> 
+	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2021--2022</div>
 		职位: <a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">博后研究员</a><br>
 		研究内容: 图像复原和MRI图像重建<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授<br>
-	</li>
-	<li>
+	</tr>
+	<br>
+	<tr>
 		<div style="text-align:left">深圳大学, 深圳 </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div>
 		职位: 研究助理<br>
 		研究内容: 医学图像分割、深度学习中的不确定性研究<br>
 		主管: <a href="http://www.hebmlc.org/", target="_blank">王熙照</a> 教授 (IEEE Fellow, CAAI Fellow, IJMLC 主编)<br>
-	</li>
-	<li>
+	</tr>
+	<br>
+	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div>
 		职位: 研究助理<br>
 		研究内容: 图像压缩<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
-	</li>
-	<li>
+	</tr>
+	<br>
+	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div>
 		职位: 研究助理<br>
 		研究内容: 图像修复<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
-	</li>
-</ul>
+	</tr>
+</tbody>
+</table>
 
 
-<h2>精选出版物 [总引用: 4419] [最高引用: 1047] </h2>
-<h3>#：共同一作 *：通讯作者</h3>
+<h2>精选出版物 [总引用: 4428] [最高引用: 1047] </h2>
+<h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
 	<table id="tbPublications" width="100%">
@@ -880,6 +887,15 @@
 
 
 <h2>学术服务</h2>
+<h3>青年编委</h3>
+<table id="tbTeaching" border="0" width="100%">
+	<tbody>
+		<tr>
+			<td> <a href="https://tis.hrbeu.edu.cn/", target="_blank">《智能系统学报》- 中国人工智能学会会刊</a></td>
+		</tr>
+	</tbody>
+</table>
+
 <h3>客座编辑</h3>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
@@ -916,7 +932,7 @@
 	</tbody>
 </table>
 
-<h3>程序委员会成员 (PC member)</h3>
+<h3>程序委员会成员</h3>
 <table id="tbTeaching" border="0" width="100%">
 		<tbody>
 			<tr>
@@ -926,7 +942,7 @@
 				<td> <a href="https://2025.ijcai.org/", target="_blank">34th International Joint Conference on Artificial Intelligence (IJCAI-25), 2025.</a></td>
 			</tr>
 			<tr>
-				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR, New Trends in Image Restoration and Enhancement workshop and challenges on image and video processing (NTIRE), 2022, 2023, 2024.</a></td>
+				<td> <a href="https://data.vision.ee.ethz.ch/cvl/ntire22/", target="_blank">CVPR-NTIRE, 2022, 2023, 2024.</a></td>
 			</tr>
 			<tr>
 				<td> <a href="https://data.vision.ee.ethz.ch/cvl/aim22/", target="_blank">ICCV, AIM: Advances in Image Manipulation workshop and challenges, 2022.</a></td>
@@ -991,12 +1007,12 @@
         <tr>
 			<td> Knowledge-Based Systems (KBS)</td>
 		</tr>
-		<tr>
+		<!-- <tr>
 			<td> Computer Vision and Image Understanding (CVIU)</td>
 		</tr>
 		<tr>
 			<td> IEEE Signal Processing Letters (SPL)</td>
-		</tr>
+		</tr> -->
 		<tr>
 			<td> ...</td>
 		</tr>
@@ -1174,7 +1190,7 @@
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
 </div> -->     
 <br>
-&copy; 李俊诚 | 最后更新: 2024-12
+&copy; 李俊诚 | 最后更新: 2025-7
 </center>
 </p>
 
