--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 <h2>News</h2>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>I will serve as a SPC for ECAI-25.</td></tr>
+		<tr><td>Congratulations! MSRN has reached 1,000 citations! 2025.</td></tr>
+		<tr><td>I will serve as a SPC for ECAI-25, 2025.</td></tr>
 		<tr><td>One paper (IEEE TMM) is selected as Highly Cited Papers in the latest issue of ESI Index, 2025.</td></tr>
 		<tr><td>I will serve as a PC Member for IJCAI-25.</td></tr>
 		<tr><td>One paper (IEEE TIP) is selected as Highly Cited Papers in the latest issue of ESI Index, 2024.</td></tr>
@@ -115,74 +116,73 @@
 	</tbody>
 </table>
 
+<h2>Research Fundings</h2>
+<table style="border-spacing:2px">
+<tbody>
+	<tr><td>
+		National Natural Science Foundation of China, 2023, Project Leader
+	</td></tr>
+	<tr><td>
+		Science and Technology Commission of Shanghai Municipality, 2023, Project Leader
+	</td></tr>
+	<tr><td>
+	    Science and Technology Commission of Shanghai Municipality (Yangfan Project), 2023, Project Leader
+	</td></tr>
+	<tr><td>
+		National Natural Science Foundation of China - International (Regional) Cooperation and Exchange Project, 2020, Key Member
+	</td></tr>
+</tbody>
+</table>
 
 <h2>Papers News</h2>
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Congratulations! MSRN has reached 1,000 citations!</td></tr>
-		<tr><td>One paper is accepted by ESWA, 2025.</td></tr>
-		<tr><td>One paper is accepted by IEEE JBHI, 2025.</td></tr>
-		<tr><td>One paper is accepted by IEEE TMI, 2025.</td></tr>
-		<tr><td>One paper is accepted by ESWA, 2025.</td></tr>
-		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
-		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
-		<tr><td>One paper is accepted by IEEE TCSVT, 2024.</td></tr>
-		<tr><td>One paper is accepted by IEEE TMM, 2024.</td></tr>
-		<tr><td>One paper is accepted by CIBM, 2024.</td></tr>
-		<tr><td>One paper is accepted by IEEE TIM, 2024.</td></tr>
-		<tr><td>One paper is accepted by Information Processing and Management, 2024.</td></tr>
-		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
-		<tr><td>One paper is accepted by ESWA, 2024.</td></tr>
-		<tr><td>One paper is accepted by MICCAI, 2024. (Oral)</td></tr>
-		<tr><td>One paper is accepted by Neural Networks, 2024.</td></tr>
-		<tr><td>One paper is accepted by IEEE JBHI, 2024.</td></tr>
-		<tr><td>One paper is accepted by ACM Computing Surveys, 2024.</td></tr>
-		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
-		<tr><td>One paper is accepted by CVPR, 2024.</td></tr>
-		<tr><td>One paper is accepted by IEEE TMI, 2024.</td></tr>
-		<tr><td>One paper is accepted by CIBM, 2023.</td></tr>
-		<tr><td>One paper is accepted by IEEE TMI, 2023.</td></tr>
-		<tr><td>One paper is accepted by IEEE JBHI, 2023.</td></tr>
-		<tr><td>One review is accepted by Journal of Image and Graphics, 2023.</td></tr> 
-		<!-- <tr><td>One paper is accepted by CVIU, 2023.</td></tr>  -->
-		<!-- <tr><td>One paper is accepted by ACPR, 2023.</td></tr>  -->
-		<tr><td>One paper is accepted by MICCAI, 2023.</td></tr> 
-		<tr><td>One paper is accepted by PR, 2023.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TMM, 2023.</td></tr> 
-		<!-- <tr><td>One review is accepted by Mathematics, 2023.</td></tr>  -->
-		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2023.</td></tr> 	 -->
-		<!-- <tr><td>One paper is accepted by CICP, 2023.</td></tr>  -->
-		<tr><td>One paper is accepted by IEEE TIP, 2023.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TITS, 2023.</td></tr> 
-		<!-- <tr><td>One paper is accepted by ICASSP, 2023.</td></tr>  -->
-		<!-- <tr><td>One paper is accepted by ACM TOMM, 2022.</td></tr>  -->
+		<tr><td>One paper is accepted to ESWA, 2025.</td></tr>
+		<tr><td>One paper is accepted to IEEE JBHI, 2025.</td></tr>
+		<tr><td>One paper is accepted to IEEE TMI, 2025.</td></tr>
+		<tr><td>One paper is accepted to ESWA, 2025.</td></tr>
+		<tr><td>One paper is accepted to IEEE JBHI, 2024.</td></tr>
+		<tr><td>One paper is accepted to CIBM, 2024.</td></tr>
+		<tr><td>One paper is accepted to IEEE TCSVT, 2024.</td></tr>
+		<tr><td>One paper is accepted to IEEE TMM, 2024.</td></tr>
+		<tr><td>One paper is accepted to CIBM, 2024.</td></tr>
+		<tr><td>One paper is accepted to IEEE TIM, 2024.</td></tr>
+		<tr><td>One paper is accepted to Information Processing and Management, 2024.</td></tr>
+		<tr><td>One paper is accepted to IEEE TMI, 2024.</td></tr>
+		<tr><td>One paper is accepted to ESWA, 2024.</td></tr>
+		<tr><td>One paper is accepted to MICCAI, 2024. (Oral)</td></tr>
+		<tr><td>One paper is accepted to Neural Networks, 2024.</td></tr>
+		<tr><td>One paper is accepted to IEEE JBHI, 2024.</td></tr>
+		<tr><td>One paper is accepted to ACM Computing Surveys, 2024.</td></tr>
+		<tr><td>One paper is accepted to IEEE TMI, 2024.</td></tr>
+		<tr><td>One paper is accepted to CVPR, 2024.</td></tr>
+		<tr><td>One paper is accepted to IEEE TMI, 2024.</td></tr>
+		<tr><td>One paper is accepted to CIBM, 2023.</td></tr>
+		<tr><td>One paper is accepted to IEEE TMI, 2023.</td></tr>
+		<tr><td>One paper is accepted to IEEE JBHI, 2023.</td></tr>
+		<tr><td>One review is accepted to Journal of Image and Graphics, 2023.</td></tr> 
+		<tr><td>One paper is accepted to MICCAI, 2023.</td></tr> 
+		<tr><td>One paper is accepted to PR, 2023.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TMM, 2023.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TIP, 2023.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TITS, 2023.</td></tr> 
 		<tr><td>------Postdoc--------</td></tr> 
-		<tr><td>One paper is accepted by Neurocomputing, 2022.</td></tr>
-		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
-		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2022.</td></tr> 	 -->
-		<!-- <tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr>  -->
-		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
-		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
+		<tr><td>One paper is accepted to Neurocomputing, 2022.</td></tr>
+		<tr><td>One paper is accepted to IJCAI, 2022.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TMM, 2022.</td></tr> 
+		<tr><td>One paper is accepted to AAAI, 2021.</td></tr> 
 		<tr><td>-------Ph.D---------</td></tr> 
-		<tr><td>One paper is accepted by ICCV, 2021.</td></tr> 
-		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TMM, 2021.</td></tr> 
-		<tr><td>One paper is accepted by PR, 2021.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
-		<!-- <tr><td>One paper is accepted by ICME, 2021.</td></tr> 	 -->
-		<tr><td>One paper is accepted by IEEE TCSVT 2020.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TMM, 2020.</td></tr> 
-		<!-- <tr><td>One paper is accepted by IEEE Access, 2020.</td></tr>  -->
-		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
-		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
-		<!-- <tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr>  -->
-		<!-- <tr><td>One challenge report is accepted by ICCV Workshop, 2019.</td></tr>  -->
-		<!-- <tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	 -->
-		<!-- <tr><td>One paper is accepted by ICONIP, 2018.</td></tr>  -->
-		<!-- <tr><td>One paper is accepted by ACCV, 2018.</td></tr>  -->
-		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
-		<!-- <tr><td>One challenge report is accepted by CVPR Workshop, 2018.</td></tr> 	 -->
+		<tr><td>One paper is accepted to ICCV, 2021.</td></tr> 
+		<tr><td>One paper is accepted to ACMMM, 2021.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TMM, 2021.</td></tr> 
+		<tr><td>One paper is accepted to PR, 2021.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TMM 2021.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TCSVT 2020.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TMM, 2020.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TNNLS, 2020.</td></tr> 
+		<tr><td>One paper is accepted to IEEE TIP, 2020.</td></tr> 	
+		<tr><td>One paper is accepted to ECCV, 2018.</td></tr> 
 	</tbody>
 </table>
 </div>
