--- a/index_zw.html
+++ b/index_zw.html
@@ -96,7 +96,8 @@
 <h2>新闻</h2>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>我将担任 ECAI-25 的高级程序委员会成员（SPC）.</td></tr>
+		<tr><td>祝贺！MSRN的引用次数已达1,000次！ 2025</td></tr>
+		<tr><td>我将担任 ECAI-25 的高级程序委员会成员（SPC）, 2025.</td></tr>
 		<tr><td>1 篇论文（IEEE TMM）入选ESI高被引论文, 2025.</td></tr>
 		<tr><td>我将担任 IJCAI-25 的程序委员会成员（PC）.</td></tr>
 		<tr><td>1 篇论文（IEEE TIP）入选ESI高被引论文, 2024.</td></tr>
@@ -107,112 +108,96 @@
 </table>
 
 <h2>基金项目</h2>
-<ul>
-	<li>
+<table style="border-spacing:2px">
+<tbody>
+	<tr><td>
 		--------主持--------
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		国家自然科学基金-青年项目, 2023, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		上海市科委“科技创新行动计划”面上项目, 2023, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		上海市科委“科技创新行动计划”启明星项目（扬帆专项）, 2023, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		上海市高校青年教师资助重点项目, 2023, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		上海大学青年英才启航计划, 2023, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		上海市重点实验室开放课题, 2023, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		广东省重点实验室开放课题, 2023, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		江苏省重点实验室创新基金, 2022, 主持
-	</li>
-	<li>
+	</td></tr>
+	<tr><td>
 		--------参与--------
-	</li>
-	<li>
-		国家自然科学基金-国际(地区)合作与交流项目, 100W, 2020, 参与
-	</li>
-	<li>
-		国家自然科学基金-面上项目, 63W, 2019, 参与
-	</li>
-</ul>
+	</td></tr>
+	<tr><td>
+		国家自然科学基金-国际(地区)合作与交流项目, 2020, 参与
+	</td></tr>
+	<tr><td>
+		国家自然科学基金-面上项目, 2019, 参与
+	</td></tr>
+</tbody>
+</table>
 
 <h2>精选论文接收情况</h2>
 <div class="scroll-container">
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>祝贺！MSRN的引用次数已达1,000次！</td></tr>
-		<tr><td>一篇论文已被 ESWA 接收, 2025.</td></tr>
-		<tr><td>一篇论文已被 IEEE JBHI 接收, 2025.</td></tr>
-		<tr><td>一篇论文已被 IEEE TMI 接收, 2025.</td></tr>
-		<tr><td>一篇论文已被 ESWA 接收, 2025.</td></tr>
-		<tr><td>一篇论文已被 IEEE JBHI 接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 IEEE TCSVT 接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 IEEE TMM 接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 CIBM 接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 IEEE TIM接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 Information Processing and Management接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 ESWA接收, 2024.</td></tr>
-		<tr><td>一篇论文已被 MICCAI接收, 2024 (Oral).</td></tr>
-		<tr><td>一篇论文已被 Neural Networks接收, 2024.</td></tr> 
-		<tr><td>一篇论文已被 IEEE JBHI接收, 2024.</td></tr> 
-		<tr><td>一篇论文已被 ACM Computing Surveys接收, 2024.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr> 
-		<tr><td>一篇论文已被 CVPR接收, 2024.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMI接收, 2024.</td></tr> 
-		<tr><td>一篇论文已被 CIBM接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMI接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 IEEE JBHI接收, 2023.</td></tr> 
-		<tr><td>一篇综述已被 中国图象图形学报接收, 2023.</td></tr> 
-		<!-- <tr><td>一篇论文已被 CVIU接收, 2023.</td></tr>  -->
-		<!-- <tr><td>一篇论文已被 ACPR接收, 2023.</td></tr>  -->
-		<tr><td>一篇论文已被 MICCAI接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 PR接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMM接收, 2023.</td></tr> 
-		<!-- <tr><td>一篇综述已被 Mathematics接收, 2023.</td></tr>  -->
-		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2023.</td></tr> 	 -->
-		<!-- <tr><td>一篇论文已被 CICP 接收, 2023.</td></tr>  -->
-		<tr><td>一篇论文已被 IEEE TIP接收, 2023.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TITS接收, 2023.</td></tr> 
-		<!-- <tr><td>一篇论文已被 ICASSP接收, 2023.</td></tr>  -->
-		<!-- <tr><td>一篇论文已被 ACM TOMM接收, 2022.</td></tr>  -->
+		<tr><td>一篇论文被 ESWA 接收, 2025.</td></tr>
+		<tr><td>一篇论文被 IEEE JBHI 接收, 2025.</td></tr>
+		<tr><td>一篇论文被 IEEE TMI 接收, 2025.</td></tr>
+		<tr><td>一篇论文被 ESWA 接收, 2025.</td></tr>
+		<tr><td>一篇论文被 IEEE JBHI 接收, 2024.</td></tr>
+		<tr><td>一篇论文被 CIBM 接收, 2024.</td></tr>
+		<tr><td>一篇论文被 IEEE TCSVT 接收, 2024.</td></tr>
+		<tr><td>一篇论文被 IEEE TMM 接收, 2024.</td></tr>
+		<tr><td>一篇论文被 CIBM 接收, 2024.</td></tr>
+		<tr><td>一篇论文被 IEEE TIM接收, 2024.</td></tr>
+		<tr><td>一篇论文被 Information Processing and Management接收, 2024.</td></tr>
+		<tr><td>一篇论文被 IEEE TMI接收, 2024.</td></tr>
+		<tr><td>一篇论文被 ESWA接收, 2024.</td></tr>
+		<tr><td>一篇论文被 MICCAI接收, 2024 (Oral).</td></tr>
+		<tr><td>一篇论文被 Neural Networks接收, 2024.</td></tr> 
+		<tr><td>一篇论文被 IEEE JBHI接收, 2024.</td></tr> 
+		<tr><td>一篇论文被 ACM Computing Surveys接收, 2024.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMI接收, 2024.</td></tr> 
+		<tr><td>一篇论文被 CVPR接收, 2024.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMI接收, 2024.</td></tr> 
+		<tr><td>一篇论文被 CIBM接收, 2023.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMI接收, 2023.</td></tr> 
+		<tr><td>一篇论文被 IEEE JBHI接收, 2023.</td></tr> 
+		<tr><td>一篇综述被 中国图象图形学报接收, 2023.</td></tr> 
+		<tr><td>一篇论文被 MICCAI接收, 2023.</td></tr> 
+		<tr><td>一篇论文被 PR接收, 2023.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMM接收, 2023.</td></tr> 
+		<tr><td>一篇论文被 IEEE TIP接收, 2023.</td></tr> 
+		<tr><td>一篇论文被 IEEE TITS接收, 2023.</td></tr> 
 		<tr><td>------博后期间-----------</td></tr> 
-		<tr><td>一篇论文已被 Neurocomputing接收, 2022.</td></tr>
-		<tr><td>一篇论文已被 IJCAI接收, 2022.</td></tr> 
-		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2022.</td></tr> 	 -->
-		<!-- <tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr>  -->
-		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
-		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
+		<tr><td>一篇论文被 Neurocomputing接收, 2022.</td></tr>
+		<tr><td>一篇论文被 IJCAI接收, 2022.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMM接收, 2022.</td></tr> 
+		<tr><td>一篇论文被 AAAI接收, 2021.</td></tr> 
 		<tr><td>------博士期间---------</td></tr> 
-		<tr><td>一篇论文已被 ICCV接收, 2021.</td></tr> 
-		<tr><td>一篇论文已被 ACMMM接收, 2021.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
-		<tr><td>一篇论文已被 PR接收, 2021.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
-		<!-- <tr><td>一篇论文已被 ICME接收 2021.</td></tr> 	 -->
-		<tr><td>一篇论文已被 IEEE TCSVT接收, 2020.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TMM接收, 2020.</td></tr> 
-		<!-- <tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr>  -->
-		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
-		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
-		<!-- <tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr>  -->
-		<!-- <tr><td>一篇比赛报告已被 ICCV Workshop接收, 2019.</td></tr>  -->
-		<!-- <tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	 -->
-		<!-- <tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr>  -->
-		<!-- <tr><td>一篇论文已被 ACCV接收, 2018.</td></tr>  -->
-		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
-		<!-- <tr><td>一篇比赛报告已被 CVPR Workshop接收, 2018.</td></tr> 	 -->
+		<tr><td>一篇论文被 ICCV接收, 2021.</td></tr> 
+		<tr><td>一篇论文被 ACMMM接收, 2021.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMM接收, 2021.</td></tr> 
+		<tr><td>一篇论文被 PR接收, 2021.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMM接收, 2021.</td></tr> 
+		<tr><td>一篇论文被 IEEE TCSVT接收, 2020.</td></tr> 
+		<tr><td>一篇论文被 IEEE TMM接收, 2020.</td></tr> 
+		<tr><td>一篇论文被 IEEE TNNLS接收, 2020.</td></tr> 
+		<tr><td>一篇论文被 IEEE TIP接收, 2020.</td></tr> 	
+		<tr><td>一篇论文被 ECCV接收, 2018.</td></tr> 
 	</tbody>
 </table>
 </div>
