--- a/index_zw.html
+++ b/index_zw.html
@@ -76,7 +76,7 @@
 <tbody> 
 	<tr>
 	<td style="text-align: justify;">		
-	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的全球前2%顶尖科学家榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文3篇）, 谷歌学术引用量超4000余次，其中单篇一作最高引用990余次。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
+	李俊诚，上海市青年科技英才“扬帆计划”获得者，入选斯坦福大学发布的全球前2%顶尖科学家榜单，获中国产学研合作创新成果一等奖。博士毕业于华东师范大学，师从<b><a href="https://faculty.ecnu.edu.cn/_s16/zgx2/main.psp", target="_blank">张桂戌</a></b>教授，曾担任香港中文大学博后研究员，合作导师为<b><a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a></b>教授。2022年7月入职上海大学以来，主持包括国自然青年基金、上海市科委“科技创新行动计划”面上项目、上海市青年科技英才扬帆计划、上海高校青年教师重点资助项目及多个重点实验室开放课题。长期从事计算机视觉、自然图像/医学影像智能处理与人工智能等研究，取得了一系列原创性成果，在国际知名期刊和会议（如：ACM Computing Survey、IEEE TIP\TNNLS\TMM\TCSVT\TMI、CVPR、ECCV、ICCV、AAAI、IJCAI、MICCAI等）上发表论文50余篇（ESI高被引论文4篇）, 谷歌学术引用量超4000余次，其中单篇一作最高引用990余次。同时，还担任Mathematics和IET Computer Version期刊客座编辑、多个国际挑战赛的组织者和程序委员，并长期担任包括TPAMI、TIP、TNNLS、TMM、CVPR、ICCV、ECCV、MICCAI在内的多个国际期刊和会议审稿人。
 	</td>
 	</tr>
 </tbody>
@@ -232,6 +232,13 @@
 <table id="tbPublications" width="100%">
 <tbody> 
 	<tr>
+		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2024.07.02--2024.08.01</div>
+		职位: 访问学者<br>
+		研究内容: 医学影像智能处理<br>
+		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
+	</tr>
+	<br>
+	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2021--2022</div>
 		职位: <a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">博后研究员</a><br>
 		研究内容: 图像复原和MRI图像重建<br>
@@ -247,14 +254,14 @@
 	<br>
 	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div>
-		职位: 研究助理<br>
+		职位: 访问学者<br>
 		研究内容: 图像压缩<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
 	</tr>
 	<br>
 	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div>
-		职位: 研究助理<br>
+		职位: 访问学者<br>
 		研究内容: 图像修复<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
 	</tr>
