--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 	<tr>
 		
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2021--2022</div><br>
-		<a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">Postdoctoral Fellow</a><br>
+		Postdoctoral Researcher<br>
 		Topic: Image resolution and medical image reconstruction<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a><br>
 		
@@ -255,7 +255,7 @@
 </tbody>
 </table>
 
-<h2>Selected Publications [Total Citations: 4464] [Highest Citation: 1050] </h2>
+<h2>Selected Publications [Total Citations: 4466] [Highest Citation: 1050] </h2>
 <h4>#：Co-ﬁrst authors *：Corresponding author</h3>
 
 <h3>Survey</h4>
