--- a/index_zw.html
+++ b/index_zw.html
@@ -240,7 +240,7 @@
 	<br>
 	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2021--2022</div>
-		职位: <a href="https://aims.cuhk.edu.hk/converis/portal/detail/Person/73425234?auxfun=&lang=en_GB">博后研究员</a><br>
+		职位: 博后研究员<br>
 		研究内容: 图像复原和MRI图像重建<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授<br>
 	</tr>
@@ -269,7 +269,7 @@
 </table>
 
 
-<h2>精选出版物 [总引用: 4464] [最高引用: 1050] </h2>
+<h2>精选出版物 [总引用: 4466] [最高引用: 1050] </h2>
 <h4>#：共同一作 *：通讯作者</h3>
 
 <h3>综述</h3>
