--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
 	<br>
 	<tr>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div><br>
-		Visiting Scholar<br>
+		Research Assistant (RA)r<br>
 		Topic: Image Compression<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
 	</tr>
 	<br>
 	<tr>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div><br>
-		Visiting Scholar<br>
+		Research Assistant (RA)<br>
 		Topic: Image Restoration<br>
 		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">Tieyong Zeng</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
 	</tr>
