--- a/index_zw.html
+++ b/index_zw.html
@@ -254,14 +254,14 @@
 	<br>
 	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div>
-		职位: 访问学者<br>
+		职位: 研究助理<br>
 		研究内容: 图像压缩<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
 	</tr>
 	<br>
 	<tr>
 		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div>
-		职位: 访问学者<br>
+		职位: 研究助理<br>
 		研究内容: 图像修复<br>
 		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a> 教授 (<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>主任)<br>
 	</tr>
